# partout

./: .gitignore  .gitmodules  .src-ref  .swiftlint.yml  .version  CMakeLists.txt  LICENSE.mit  Package.resolved  Package.swift  README.md  android.cmake  android.toolchain.cmake  ci-generate.sh
API/: src  (+5 more)
Sources/: CMakeLists.txt  files.cmake  partout-c.cmake  partout.cmake  partout_c.cmake
Sources/API/: APIEngine.swift  APIManager.swift  APIMapper.swift  APIRepository.swift  InMemoryAPIRepository.swift  InMemoryProviderRepository.swift  Partout+API.swift  Provider.swift  ProviderCustomizationSupporting.swift  ProviderInfrastructure.swift  ProviderManager.swift  ProviderMetadata+Codable.swift  ProviderRepository.swift  ProviderServerParameters.swift  ProviderToken.swift
Sources/APIBundle/: API+Bundle.swift
Sources/Docs.docc/: PartoutOpenVPN.md  index.md
Sources/GenericJSON/: JSON.swift  Querying.swift
Sources/Implementations/: Exports.swift
Sources/MiniFoundation/: Data+Extensions.swift  MiniFoundation+Compat.swift  MiniFoundation+Native.swift  MiniFoundation.swift  MiniFoundationError.swift  String+Extensions.swift  UniqueID.swift
Sources/MiniFoundationCompat/: CharacterSet.swift  Compat.swift  CompatString+Extensions.swift  Data.swift  Date.swift  Error+Extensions.swift  FileBuffer.swift  FileManager.swift  JSONCoder.swift  NSLog.swift  RegularExpression.swift  URL.swift  UUID.swift
Sources/MiniFoundationCore/: AsyncStream+Extensions.swift  CurrentValueStream.swift  FileBuffer.swift  MiniFileManager.swift  MiniFoundationCore.swift  MiniOSVersion.swift  MiniRegularExpression.swift  MiniURLProtocol.swift  PRNG.swift  PassthroughStream.swift  RandomlyInitialized.swift  SubjectStream.swift  Timestamp.swift
Sources/MiniFoundationCore_C/: base64.c  os.c  prng.c  rx.cc  url.c  uuid.c
Sources/MiniFoundationExample/: main.swift
Sources/MiniFoundationNative/: Native.swift  NativeData+Extensions.swift  NativeFileManager.swift  NativeJSONCoder.swift  NativeRegularExpression.swift  NativeString+Extensions.swift  NativeURL.swift
Sources/MiniFoundation_C/: rx.cc  std.c
Sources/Partout/: ABI.swift  ABIContext.swift  ABIDaemon.swift  ABIErrorPayload.swift  ABIHelpers.swift  ABI_C.swift  CommonABI_C.swift  DaemonABI.swift  DaemonABI_C.swift  DummyReachabilityObserver.swift  Exports.swift  NativeHelpers.swift  NativeTunnel.swift  NativeTunnelController.swift  Partout.swift  PartoutDaemon.swift  PartoutExports.swift  Registry+ABI.swift  Registry+Support.swift  Registry.swift  TaggedModule.swift  TaggedProfile.swift  TunWrapper.swift  VirtualTunnelController.swift  VirtualTunnelInterface.swift
Sources/PartoutABI_C/: partout.c
Sources/PartoutAPI/: InMemoryProviderRepository.swift  PartoutAPI.swift  Provider+Metadata.swift  Provider.swift  ProviderInfrastructure.swift  ProviderMetadata+Codable.swift  ProviderRepository.swift  ProviderServerParameters.swift
Sources/PartoutCodegen/: Codegen+Encoders.swift  Codegen.swift  CxxEncoder.swift  IR.swift  KotlinEncoder.swift  ModelScanner.swift  OpenAPIEncoder.swift  PartoutCodegen.swift  SwiftEncoder.swift
Sources/PartoutCore/: Partout+Core.swift  Partout.swift  PartoutConstants.swift  PartoutCore.swift  PartoutError.swift
Sources/PartoutCore_C/: common.c  file.c  lib.c  mux.c  network.c  prng.c  socket.c  tls_options.c  tun.c  tun_android.c  tun_darwin.c  tun_dummy.c  tun_linux.c  tun_windows.c  tunctrl.c  zd.c
Sources/PartoutCrypto_C/: crypto_aead_mbedtls.h  crypto_darwin.c  crypto_mbedtls.c  crypto_mbedtls.h  crypto_mbedtls_api.h  crypto_openssl.c  crypto_openssl.h  crypto_windows.c  tls_options.c
Sources/PartoutFoundation/: Darwin+Extensions.swift  Foundation+Extensions.swift  PartoutFoundationExports.swift
Sources/PartoutInterfaces/: Exports.swift  InterfacesExports.swift
Sources/PartoutModels/: Partout+Models.swift  PartoutError.swift  TaggedProfile.swift
Sources/PartoutOS/: OSWrapper.swift  Partout+OS.swift
Sources/PartoutOS_C/: lib.c  socket.c  tun_android.c  tun_darwin.c  tun_linux.c  tun_windows.c
Sources/PartoutOpenVPN/: CompressionAlgorithm.swift  CompressionFraming.swift  Credentials.swift  CryptoBackend.swift  CryptoContainer.swift  KeyDecrypter.swift  NetworkSettingsBuilder.swift  ObfuscationMethod.swift  OpenVPN+ArgumentQuoting.swift  OpenVPN+Configuration.swift  OpenVPN+ConnectionOptions.swift  OpenVPN+Extensions.swift  OpenVPN+Serialization.swift  OpenVPN.swift  OpenVPNConnection+Alias.swift  OpenVPNConnection+Default.swift  OpenVPNConnection.swift  OpenVPNConnectionOptions.swift  OpenVPNModule+Implementation.swift  OpenVPNModule.swift  OpenVPNOption.swift  Partout+OpenVPN.swift  PartoutError+OpenVPN.swift  PartoutOpenVPN.swift  StandardOpenVPNParser+Builder.swift  StandardOpenVPNParser+Default.swift  StandardOpenVPNParser.swift  StandardOpenVPNParserError.swift  StaticKey.swift  TLSWrap.swift
Sources/PartoutOpenVPNConnection/: OpenVPNConnection+Alias.swift  OpenVPNConnection+Default.swift  OpenVPNConnection+Options.swift  OpenVPNConnection.swift  OpenVPNConnectionOptions.swift  OpenVPNConnectionV2+Default.swift  OpenVPNConnectionV2.swift
Sources/PartoutOpenVPNConnection_C/: control.c  dp_mode.c  dp_mode_ad.c  pkt_proc.c
Sources/PartoutOpenVPNOpenSSL/: OpenVPNConnection+Default.swift  StandardOpenVPNParser.swift
Sources/PartoutOpenVPN_C/: control.c  dp_framing.c  dp_lzo.c  dp_mode.c  dp_mode_ad.c  dp_mode_hmac.c  logging.c  lzo.c  mss_fix.c  pkt_proc.c
Sources/PartoutOpenVPN_ObjC/: CryptoAEAD+OpenVPN.m  CryptoCBC+OpenVPN.m  DataPath.m  LZOFactory.m  OSSLCryptoBox.m  OSSLTLSBox.m  PacketMacros.m  PacketStream.m  StandardLZO.m
Sources/PartoutPortable/: CZeroingData.swift  Data+Zeroing.swift  PlatformPRNG.swift
Sources/PartoutPortable_C/: tls_options.c  zd.c
Sources/PartoutPreviews/: PartoutPreviewsExports.swift
Sources/PartoutProviders/: Partout+Providers.swift  ProviderCache.swift  ProviderModule.swift  (+2 more)
cmake/: AddDistributionTarget.function.cmake  CMakeLists.txt  PartoutConfig.cmake.in  distribute.script.cmake  partout-c.cmake  partout-core.cmake  partout.cmake  prebuilt.cmake
(+3342 files in other folders)
